# anagram

./: .gitignore  CMakeLists.txt  README.md  anagram.cpp  anagram.h  main.cpp
inc/: anagram.h  builderinstance.h  charmap.h
src/: anagram.cpp  builderinstance.cpp  charmap.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
